Fixing unresponsive patient chart on smaller screens

--- a/src/widgets/vitals/vitals-detailed-summary.css
+++ b/src/widgets/vitals/vitals-detailed-summary.css
@@ -60,7 +60,7 @@
 }
 
 :global(.omrs-breakpoint-lt-tablet) .vitalsSummary {
-  padding: 3.25rem 0.5rem 0 0.5rem;
+  padding: 0.5rem;
 }
 
 .pagination {
